--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,9 +1,5 @@
 ---
-
-winstall::products:
-  '7-Zip 19.00 (x64)':
-    ensure: 'installed'
-    source: 'https://www.7-zip.org/a/7z1900-x64.msi'
-    install_options:
-      - '/S'
+lookup_options:
+  winstall::products:
+    merge: deep
 
